--- a/res/layout/lista_de_compras_activity.xml
+++ b/res/layout/lista_de_compras_activity.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/nomeItemLayout"
@@ -19,44 +19,55 @@
             android:imeOptions="actionDone"
             android:inputType="text" >
         </EditText>
-
     </LinearLayout>
-    
+
     <LinearLayout
         android:id="@+id/comboCategoriaLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal" >
 
-        
         <Spinner
             android:id="@+id/categoriaCombo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1" >
         </Spinner>
-
     </LinearLayout>
-    
+
     <LinearLayout
         android:id="@+id/botaoAdicionarLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" 
-        android:gravity="right">
+        android:gravity="right"
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/botaoAdicionar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cadastrar">
+            android:text="Cadastrar" >
         </Button>
     </LinearLayout>
-    
+
     <ListView
         android:id="@+id/listaDeCompras"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
     </ListView>
+
+    <LinearLayout
+        android:id="@+id/totalLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/totalTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </LinearLayout>
