Implementado sem frameworks.

--- a/res/layout/detalhes_activity.xml
+++ b/res/layout/detalhes_activity.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:padding="5dp">
 
     <LinearLayout
         android:id="@+id/lTitulo"
@@ -12,10 +13,10 @@
 
         <EditText
             android:id="@+id/qtde"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Informe a quantidade..."
+            android:hint="@string/qtde_hint"
             android:inputType="number"
             android:padding="5dp" />
         
@@ -23,17 +24,16 @@
 
     <LinearLayout
         android:id="@+id/lDescricao"
-        android:layout_below="@id/lTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/valorUnitario"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Informe o valor unitário..."
+            android:hint="@string/valor_unitario_hint"
             android:inputType="numberDecimal"
             android:padding="5dp" />
         
@@ -43,8 +43,7 @@
         android:id="@+id/idBotaoSalvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
         android:padding="5dp"
-        android:text="Salvar" />
+        android:text="@string/salvar" />
 
 </LinearLayout>
