--- a/res/layout/lista_de_compras_activity.xml
+++ b/res/layout/lista_de_compras_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+    
     <LinearLayout
         android:id="@+id/nomeItemLayout"
         android:layout_width="fill_parent"
@@ -15,7 +15,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Informe o item..."
+            android:hint="@string/item_hint"
             android:imeOptions="actionDone"
             android:inputType="text" >
         </EditText>
@@ -39,14 +39,14 @@
         android:id="@+id/botaoAdicionarLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="end"
         android:orientation="horizontal" >
 
         <Button
             android:id="@+id/botaoAdicionar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cadastrar" >
+            android:text="@string/cadastrar" >
         </Button>
     </LinearLayout>
 
@@ -60,7 +60,7 @@
         android:id="@+id/totalLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="end"
         android:orientation="horizontal" >
 
         <TextView
