--- a/res/layout/lista_de_compras_activity.xml
+++ b/res/layout/lista_de_compras_activity.xml
@@ -5,69 +5,85 @@
     android:orientation="vertical" >
     
     <LinearLayout
-        android:id="@+id/nomeItemLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <EditText
-            android:id="@+id/nomeItem"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/item_hint"
-            android:imeOptions="actionDone"
-            android:inputType="text" >
-        </EditText>
-    </LinearLayout>
-
+        android:orientation="horizontal"
+        android:id="@+id/croutonSpace"
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
+    
     <LinearLayout
-        android:id="@+id/comboCategoriaLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+	    android:orientation="vertical"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:padding="10dp">
+    
+	    <LinearLayout
+	        android:id="@+id/nomeItemLayout"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal" >
+	
+	        <EditText
+	            android:id="@+id/nomeItem"
+	            android:layout_width="0dp"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:hint="@string/item_hint"
+	            android:imeOptions="actionDone"
+	            android:inputType="text" >
+	        </EditText>
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:id="@+id/comboCategoriaLayout"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal" >
+	
+	        <Spinner
+	            android:id="@+id/categoriaCombo"
+	            android:layout_width="0dp"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1" >
+	        </Spinner>
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:id="@+id/botaoAdicionarLayout"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="end"
+	        android:orientation="horizontal" >
+	
+	        <Button
+	            android:id="@+id/botaoAdicionar"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:padding="20dp"
+	            android:text="@string/cadastrar" >
 
-        <Spinner
-            android:id="@+id/categoriaCombo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
-        </Spinner>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/botaoAdicionarLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/botaoAdicionar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cadastrar" >
-        </Button>
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/listaDeCompras"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
-
-    <LinearLayout
-        android:id="@+id/totalLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/totalTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold" />
+	        </Button>
+	    </LinearLayout>
+	
+	    <ListView
+	        android:id="@+id/listaDeCompras"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content" >
+	    </ListView>
+	
+	    <LinearLayout
+	        android:id="@+id/totalLayout"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="end"
+	        android:orientation="horizontal" >
+	
+	        <TextView
+	            android:id="@+id/totalTextView"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textStyle="bold" />
+	    </LinearLayout>
+	    
     </LinearLayout>
 
 </LinearLayout>
