--- a/res/layout/lista_de_compras_activity.xml
+++ b/res/layout/lista_de_compras_activity.xml
@@ -47,6 +47,7 @@
             android:id="@+id/botaoAdicionar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             android:text="@string/cadastrar" >
         </Button>
     </LinearLayout>
